# christmas-leetcode

./: README.md
elixir/: day1.exs  day2.exs  day3.exs  day4.exs
go/: day1.go  day2.go  day3.go  day4.go  go.mod
ocaml_solutions/: dune-project  run.sh
ocaml_solutions/lib/: day1.ml  day2.ml  day3.ml  dune
ocaml_solutions/test/: dune  test_day.ml  test_day_1.ml  test_day_2.ml  test_day_3.ml
